Fixed hover on person element on mobile causing text cut-off

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -1524,13 +1524,45 @@ section.client-centre {
 		padding: 20px;
 	}
 
+	/*SERVICES PAGE*/
+	.services-page .services .service .service-image img {
+		min-height: 350px;
+	}
+	.services-page .services .service .service-text {
+		padding: 20px 40px 20px calc(30% + 40px);
+	}
+	.services-page .services .service.right .service-text {
+		padding: 20px calc(30% + 40px) 20px 40px;
+	}
 	/*OUR TEAM PAGE*/
+	.our-team .people .person:hover .profile-text {
+		height: 380px;
+	}
 	.our-team .people .person:hover .profile-text.small {
 	    height: 230px;
 	}
 	.our-team .people .person:hover .profile-text.medium {
-	    height: 320px;
+	    height: 330px;
 	}
+
+	/*CLIENT CENTRE*/
+	.conveyancing-page .flex-container {
+		display: block;
+	}
+	.conveyancing-page .left, 
+	.conveyancing-page .right {
+		flex-basis: 100%;	
+	}
+	.conveyancing-page .right .conveyancing-contact{
+		height: 300px;
+	}
+	.hidden-forms .container.conveyancing-page {
+		height: 1430px;
+	}
+	.hidden-forms .container.engagement-page {
+		height: 1800px;
+	}
+
 	/*CONTACT PAGE*/
 
 	/*Contact details*/
@@ -1566,39 +1598,6 @@ section.client-centre {
 		width: 100%;
 		height: 250px;
 		margin-bottom: 30px;
-	}
-
-	/*SERVICES PAGE*/
-	.services-page .services .service .service-image img {
-		min-height: 350px;
-	}
-	.services-page .services .service .service-text {
-		padding: 20px 40px 20px calc(30% + 40px);
-	}
-	.services-page .services .service.right .service-text {
-		padding: 20px calc(30% + 40px) 20px 40px;
-	}
-	/*OUR TEAM PAGE*/
-	.our-team .people .person:hover .profile-text {
-		height: 380px;
-	}
-
-	/*CLIENT CENTRE*/
-	.conveyancing-page .flex-container {
-		display: block;
-	}
-	.conveyancing-page .left, 
-	.conveyancing-page .right {
-		flex-basis: 100%;	
-	}
-	.conveyancing-page .right .conveyancing-contact{
-		height: 300px;
-	}
-	.hidden-forms .container.conveyancing-page {
-		height: 1430px;
-	}
-	.hidden-forms .container.engagement-page {
-		height: 1800px;
 	}
 }
 @media only screen and (max-width: 767px){
@@ -1658,6 +1657,11 @@ section.client-centre {
 		padding: 25px 15px;
 	}
 	/*OUR TEAM PAGE*/
+	.our-team .people .person:hover .profile-text,
+	.our-team .people .person:hover .profile-text.small,
+	.our-team .people .person:hover .profile-text.medium {
+		height: 100%;
+	}
 	.our-team .people .person .profile-text {
 		height: 100%;
 		opacity: 1;
